force-app/main/default/objects/CPR_Subscription_Add__c/CPR_Subscription_Add__c.object-meta.xml
<CustomObject>
    <label>CPR Subscription Add</label>
    <nameField>
        <displayFormat>CPR-SA-{0000}</displayFormat>
        <label>CPR Subscription Add Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPR Subscription Adds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>