force-app/main/default/objects/CPR_Subscription_Add__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CPR Subscription Adds</relationshipLabel>
    <relationshipName>CPR_Subscription_Adds</relationshipName>
    <type>Lookup</type>
</CustomField>