force-app/main/default/objects/CPR_Subscription_Add__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CPR Subscription Adds</relationshipLabel>
    <relationshipName>CPR_Subscription_Adds</relationshipName>
    <type>Lookup</type>
</CustomField>