force-app/main/default/objects/CPR_Subscription_Add__c/fields/CPR_Event__c.field-meta.xml
<CustomField>
    <fullName>CPR_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPR Event</label>
    <referenceTo>CPR_Event__c</referenceTo>
    <relationshipLabel>CPR Subscription Adds</relationshipLabel>
    <relationshipName>CPR_Subscription_Adds</relationshipName>
    <type>Lookup</type>
</CustomField>