force-app/main/default/objects/CPR_Subscription_Add__c/fields/Failed_Contact_Match__c.field-meta.xml
<CustomField>
    <fullName>Failed_Contact_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed Contact Match</label>
    <type>Checkbox</type>
</CustomField>