force-app/main/default/objects/CPR_Subscription_Add__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OP</fullName>
                <default>true</default>
                <label>OP</label>
            </value>
            <value>
                <fullName>SL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>