force-app/main/default/objects/CPR_Subscription_Add__c/fields/Outbound_Batch__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outbound Batch</label>
    <referenceTo>CPR_Outbound_Batch__c</referenceTo>
    <relationshipLabel>CPR Subscription Adds</relationshipLabel>
    <relationshipName>CPR_Subscription_Adds</relationshipName>
    <type>Lookup</type>
</CustomField>