force-app/main/default/objects/CPR_Subscription_Add__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>CPR__c</columns>
    <columns>Operation__c</columns>
    <columns>Status__c</columns>
    <columns>Outbound_Batch__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>